--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola mundo</p>
+    <p>Hola mundo v2.0</p>
     <br>
     <h1>Manuel Martínez Alvarez</h1>
 </body>
